[IMP] website_slides: correct display of search bar results page
**Current**
When you search for a group of words in the search bar, it displays both
courses and content related to these words. However, if you press "Enter"
or click on the magnifying glass, only the courses are shown.

**Implementation/Correction**
Consistency about this has been added. We can also see all types of results
sorted by document type to facilitate user navigation, made possible by the
controller, sending results for subsidiary contents.

task-4858135

--- a/addons/website_slides/views/website_slides_templates_course.xml
+++ b/addons/website_slides/views/website_slides_templates_course.xml
@@ -49,7 +49,7 @@
                         <t t-set="action" t-valuef="/slides"/>
                         <t t-set="display_description" t-valuef="true"/>
                         <t t-set="display_detail" t-valuef="false"/>
-                        <t t-set="placeholder">Search courses</t>
+                        <t t-set="placeholder">Search courses or contents</t>
                         <t t-set="search" t-value="search_term"/>
                     </t>
                 </div>
@@ -96,7 +96,7 @@
                                     <t t-set="action" t-value="'/slides/%s' % slug(channel)"/>
                                     <t t-set="display_description" t-valuef="true"/>
                                     <t t-set="display_detail" t-valuef="false"/>
-                                    <t t-set="placeholder">Search courses</t>
+                                    <t t-set="placeholder">Search courses or contents</t>
                                     <t t-set="search" t-value="search_term"/>
                                 </t>
                             </div>
