--- a/addons/purchase_stock/views/product_views.xml
+++ b/addons/purchase_stock/views/product_views.xml
@@ -29,9 +29,9 @@
                     <span class="fw-bold ms-1" t-esc="Math.round(record.monthly_demand.raw_value *100)/100"  name="o_kanban_monthly_demand_qty"/>
                     <field name="uom_id" class="text-muted small ms-1" groups="uom.group_uom"/>
                 </div>
-                <div name="o_kanban_purchase_suggest" t-if="record.suggested_qty.raw_value != 0"> 
+                <div name="kanban_purchase_suggest" t-if="record.suggested_qty.raw_value != 0">
                     <span class="text-info fw-bold fs-5"> Suggest </span>
-                    <span class="text-info fw-bold fs-5" t-out="record.suggested_qty.raw_value or 0" name="o_kanban_purchase_suggest_qty" />
+                    <span class="text-info fw-bold fs-5" t-out="record.suggested_qty.raw_value or 0" name="kanban_purchase_suggest_qty" />
                     <span class="text-info fw-bold fs-5"> units </span>
                 </div>
             </div>
