--- a/addons/l10n_ar/views/portal_address_templates.xml
+++ b/addons/l10n_ar/views/portal_address_templates.xml
@@ -30,6 +30,13 @@
                         been issued for your account. Please contact us directly for this
                         operation."
                 />
+                <input
+                    t-if="not (is_commercial_address and can_edit_vat)"
+                    type="hidden"
+                    readonly="1"
+                    name="l10n_ar_afip_responsibility_type_id"
+                    t-att-value="responsibility.id"
+                />
             </div>
         </div>
     </template>
