--- a/addons/spreadsheet/static/src/global_filters/components/filter_values_list/filter_values_list.scss
+++ b/addons/spreadsheet/static/src/global_filters/components/filter_values_list/filter_values_list.scss
@@ -6,3 +6,11 @@
         height: 36px;
     }
 }
+
+.o_bottom_sheet .o-filter-values {
+    min-width: unset;
+    .o-filter-item  .o-autocomplete .dropdown-item {
+        --dropdown-item-padding-y: 3px;
+        font-weight: 400;
+    }
+}
