--- a/addons/project/views/project_project_views.xml
+++ b/addons/project/views/project_project_views.xml
@@ -401,7 +401,7 @@
                                         <div role="menuitem">
                                             <a name="action_view_tasks" type="object">Tasks</a>
                                         </div>
-                                        <div role="menuitem" groups="project.group_project_milestone" t-if="record.allow_milestones.raw_value and !record.is_template.raw_value">
+                                        <div role="menuitem" groups="project.group_project_milestone" t-if="record.allow_milestones.raw_value">
                                             <a name="action_get_list_view" type="object">Milestones</a>
                                         </div>
                                     </div>
