--- a/addons/web/static/src/core/dialog/dialog.scss
+++ b/addons/web/static/src/core/dialog/dialog.scss
@@ -80,3 +80,25 @@
         }
     }
 }
+
+.o_is_mobile {
+    width: 100%;
+}
+.o_is_mobile_preview {
+    transform: scale(2);
+    transform-origin: top left;
+    > body {
+        width: 50% !important;
+        height: 15% !important;
+        scrollbar-width: thin;
+    }
+    .o_snippets_preview_row > div {
+        width: 33.33% !important;
+    }
+    .o_snippets_preview_row .o_snippet_preview_wrap[data-label]:not([data-label=""])::before{
+        transform: scale(1.5) !important;
+    }
+    .o_snippets_preview_row .o_snippet_preview_wrap.o_snippet_preview_install > .o_snippet_preview_install_btn {
+        transform: scale(1.3) !important;
+    }
+}
