[IMP] mail: improve call preview and call invitation
The welcome page and the call invitation both provide a way
to preview the camera before entering a call.

However, they have several issues:
- The call invitation does not provide a way to configure call settings.
- Both views are missing the blur setting.
- Each handles audio/video streams separately, which increases
  maintenance costs and leads to incomplete flows
  (e.g. missing warnings when permissions are denied).
- Neither relies on the call actions: the logic is duplicated
  and must be updated every time the call view is improved.

In addition, the call invitation takes up a lot of space and
does not provide useful information such as the channel the
user was invited to.

This commit improves both views by factoring out the setup logic
into its own component, which is also responsible for handling
video and audio streams.

At the same time, it reworks the call invitation to take up less
space, allow configuring the call, and display additional
information such as who is calling and on which channel.

task-5090396

closes odoo/odoo#228382

Signed-off-by: Alexandre Kühn (aku) <aku@odoo.com>

--- a/addons/mail/static/src/discuss/call/common/meeting.scss
+++ b/addons/mail/static/src/discuss/call/common/meeting.scss
@@ -1,5 +1,6 @@
+$meeting-view-bg: #111827;
 .o-mail-Meeting {
-    background-color: #111827;
+    background-color: $meeting-view-bg;
 }
 
 .o-overlay-item:has(.o-mail-Meeting) {
