--- a/addons/mail/static/src/discuss/call/common/call_invitation.scss
+++ b/addons/mail/static/src/discuss/call/common/call_invitation.scss
@@ -1,24 +1,32 @@
+$expand-curve: cubic-bezier(0.22, 1, 0.36, 1);
+
 .o-discuss-CallInvitation {
-    background-color: #000;
+    background-color: var(--o-discuss-Call-bgColor, #{$dark});
     color: #fff;
-    border-color: $gray-300 !important;
+    width: MIN(400px, 92vw);
+    transition: width 0.45s $expand-curve;
 
-    &.o-cameraPreview {
-        aspect-ratio: 16 / 9;
-        width: Min(720px, 92vw);
+    &.o-chat {
+    width: MIN(350px, 92vw);
     }
 
-    button {
-        aspect-ratio: 1;
+    &.o-preview-open {
+        width: MIN(500px, 92vw);
     }
+}
 
-    img {
-        aspect-ratio: 1;
-        width: 75px;
-        border: 3px solid gray;
-    }
+.o-mail-CallInvitation-avatar {
+    width: 40px;
+    height: 40px;
+    --pulse-spread-radius: 0.6rem;
+    animation: pulse 1s cubic-bezier(0.4, 0, 0.6, 1) infinite alternate;
+}
 
-    &.o-cameraPreview img {
-        width: 50px;
+.o-discuss-CallInvitation-cameraPreview {
+    max-height: 0;
+
+    &.o-opened {
+        transition: max-height 0.45s $expand-curve;
+        max-height: 500px;
     }
 }
