--- a/addons/web/static/src/scss/animation.scss
+++ b/addons/web/static/src/scss/animation.scss
@@ -41,5 +41,5 @@
 // pulse effect
 @keyframes pulse {
     from { box-shadow: 0 0 0 0 var(--pulse-color-from, #{$primary}); }
-    to { box-shadow: 0 0 0 2em var(--pulse-color-to, #{rgba(#FFF, 0)}); }
+    to { box-shadow: 0 0 0 var(--pulse-spread-radius, 2em) var(--pulse-color-to, #{rgba(#FFF, 0)}); }
 }
