--- a/addons/mail/static/src/core/common/composer.scss
+++ b/addons/mail/static/src/core/common/composer.scss
@@ -229,3 +229,7 @@
 .o-mail-Composer-pickerContainer.o-active {
     height: 50vh;
 }
+
+.o-mail-Composer-suggestionList:has(.o-open) {
+    border: $border-width solid $border-color;
+}
