--- a/addons/website_sale_comparison/views/product_attribute_category_views.xml
+++ b/addons/website_sale_comparison/views/product_attribute_category_views.xml
@@ -28,9 +28,12 @@
         </field>
     </record>
 
-    <menuitem action="product_attribute_category_action"
+    <menuitem
+        action="product_attribute_category_action"
         id="menu_attribute_category_action"
-        parent="website_sale.menu_catalog" groups="base.group_no_one" sequence="11"/>
+        parent="website_sale.menu_catalog"
+        groups="base.group_no_one"
+        sequence="11"/>
 
     <record id="product_attribute_tree_view_inherit" model="ir.ui.view">
         <field name="name">product.attribute.list.inherit</field>
