--- a/addons/website_sale/static/src/scss/website_sale.scss
+++ b/addons/website_sale/static/src/scss/website_sale.scss
@@ -1972,6 +1972,10 @@ $-product-radius-map: (
 }
 
 // Hide chevrons for collapsed categories
+#categories_recursive li {
+    width: 100% !important;
+}
+
 .o_categories_recursive_button:after {
     display: none;
 }
